Added settings so missing directories can be set by the user